<resources>

    <string name="app_name">Ejercicio RSS</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_splash">Ejercicio RSS</string>
    
    <!-- Textos de la pantalla inicial -->
    <string name="splash_title">ejercicio rss</string>
    <string name="splash_subtitle">curso android</string>
    <string name="splash_unutopia">rss unutopia</string>
    
    <!-- Textos de los menús -->
    <string name="menu_about">Acerca de</string>
    <string name="menu_refresh">Actualizar</string>
    
    <!-- Textos de la lista de artículos -->
    <string name="article_list_title">Artículos</string>
    <string name="article_row_title">Aquí el título del artículo</string>
    <string name="article_row_pub_date">Aquí la fecha de publicación</string>
    
    <!-- Textos del detalle de artículo -->
    <string name="article_detail_title">Aquí el título del artículo</string>
    <string name="article_detail_pub_date">Aquí la fecha de publicación</string>
    <string name="article_detail_content">Aquí el contenido del artículo</string>
    
    <!-- Textos de la pantalla Acerca de -->
    <string name="about_version">versión 1.0</string>
    
    <string name="about_text">
        Un curso online para desempleados, de iniciación a la programación Android totalmente gratuito y en horario nocturno.\n
        Este curso está dirigido a gente desempleada con conocimientos en programación que quiera empezar a desarrollar aplicaciones Android.\n
        La idea original es enfocarlo a los desempleados de Cachirulo Valley, aunque si sobran plazas se llenarán con gente de otros puntos de España.
    </string>
    
    <string name="license_title">licencia</string>
    <string name="license_text">
        Creative Commons Reconocimiento-NoComercial-CompartirIgual 3.0 Unported    
    </string>

</resources>