<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    >

    <!-- layout_centerInParent: Objeto centrado horizontal y verticalmente en el padre
         background:            Marco redondeado para el título y el subtítulo  
         gravity:               Desde el padre, indicación a los hijos 
                                (título y subtítulo) de centrado -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" 
        android:orientation="vertical"
        
        android:background="@drawable/panel_blue"
        
        android:gravity="center"
        >
        
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        
	        android:text="@string/splash_title" 
	        android:textSize="@dimen/text_h1"
	        android:textColor="@color/deep_blue" 
	        android:typeface="serif" />
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        
	        android:text="@string/splash_subtitle"
	        android:textSize="@dimen/text_h2"
	        android:textColor="@color/deep_blue" />
	    
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/rss_logo"
        android:layout_margin="10dp"
        android:contentDescription="@string/splash_unutopia" />

</RelativeLayout>
